<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.fleeca.userregistrationapplication.userEmailVerify.UserEmailVerfiyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_credential_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/app_background"
        android:padding="24dp">

        <ImageView
            android:id="@+id/logoImageView"
            style="@style/logo_iv"
            android:layout_marginTop="@dimen/space_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProfileForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xx_large"
            app:cardCornerRadius="5dp"
            app:cardElevation="6dp"
            app:cardMaxElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/tiitle_text"
                    android:layout_marginBottom="@dimen/space_medium"
                    android:text="@string/login_credentials" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:background="@color/grey_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xx_large"
                    android:text="@string/email_address"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey_color"
                    android:textSize="@dimen/font_14" />

                <EditText
                    android:id="@+id/etEmailAddress"
                    style="@style/edit_input"
                    android:text="@={viewModel.email}"
                    android:layout_marginTop="@dimen/space_micro"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/emailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_micro"
                    android:textColor="@color/bt"
                    android:textSize="@dimen/font_12" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_medium"
                    android:text="@string/password"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/font_14" />

                <EditText

                    android:id="@+id/etPassword"
                    style="@style/edit_input"
                    android:layout_marginTop="@dimen/space_micro"
                    android:hint="@string/password"
                    android:text="@={viewModel.password}"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/passwordError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/bt"
                    android:textSize="@dimen/font_12" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_xx_large" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Next Button -->
        <TextView
            android:id="@+id/btnNext"
            style="@style/bt_submit"
            android:background="@drawable/bt_submit_button_background"
            android:gravity="center"
            android:text="@string/next"
            android:onClick="@{()->viewModel.clickOnBt()}"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
