<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.fleeca.userregistrationapplication.userProfile.UserRegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_credential_layout"
        style="@style/app_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <ImageView
            android:id="@+id/logoImageView"
            style="@style/logo_iv"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProfileForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xx_large"
            app:cardCornerRadius="5dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImageView">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Heading -->
                    <TextView
                        style="@style/tiitle_text"
                        android:layout_marginBottom="@dimen/space_medium"
                        android:text="@string/complete_your_profile" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:background="@color/grey_color" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />


                    <!-- First Name -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/font_14" />

                    <EditText
                        android:id="@+id/etfirstName"
                        style="@style/edit_input"
                        android:layout_marginTop="@dimen/space_micro"
                        android:hint="@string/first_name"
                        android:text="@={viewModel.firstName}"
                        android:inputType="textCapWords" />

                    <TextView
                        android:id="@+id/firstNameError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/bt"
                        android:textSize="@dimen/font_12" />

                    <!-- Last Name -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_medium"
                        android:text="@string/last_name"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/font_14" />

                    <EditText
                        android:id="@+id/etlastName"
                        style="@style/edit_input"
                        android:layout_marginTop="@dimen/space_micro"
                        android:hint="@string/last_name"
                        android:text="@={viewModel.lastName}"
                        android:inputType="textCapWords" />

                    <TextView
                        android:id="@+id/lastNameError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/bt"
                        android:textSize="@dimen/font_12" />

                    <!-- Phone -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_medium"
                        android:text="@string/phone_number"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/font_14" />

                    <EditText
                        android:id="@+id/etPhone"
                        style="@style/edit_input"
                        android:layout_marginTop="@dimen/space_micro"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:text="@={viewModel.phoneNumber}"
                        android:maxLength="10" />

                    <TextView
                        android:id="@+id/PhoneError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/bt"
                        android:textSize="@dimen/font_12" />

                    <!-- DOB -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_medium"
                        android:text="DOB"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/font_14" />

                    <EditText
                        android:id="@+id/etDOB"
                        style="@style/edit_input"
                        android:layout_marginTop="@dimen/space_micro"
                        android:editable="false"
                        android:focusable="false"
                        android:text="@={viewModel.dob}"
                        android:focusableInTouchMode="false"
                        android:hint="DOB"
                        android:inputType="date" />

                    <TextView
                        android:id="@+id/DOBError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/bt"
                        android:textSize="@dimen/font_12" />

                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

        <!-- Next Button -->
        <TextView
            android:id="@+id/btnNext"
            style="@style/bt_submit"
            android:background="@drawable/bt_submit_button_background"
            android:gravity="center"
            android:onClick="@{()->viewModel.clickOnBt()}"
            android:text="@string/submit"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
